--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,9 +4,8 @@
         "commonjs": true,
         "es2021": true
     },
-    "extends": [
-        "airbnb-base", "prettier"
-    ],
+    "extends": 
+        "airbnb-base",
     "overrides": [
     ],
     "parserOptions": {
